fix: clear inapropriate horizontal scrolling bar in the middle of the textarea when set option `height: 'auto'` (fix #190)

--- a/apps/editor/src/css/editor.css
+++ b/apps/editor/src/css/editor.css
@@ -189,6 +189,7 @@
 
 .tui-editor-defaultUI .CodeMirror-scroll {
   cursor: text;
+  min-height: inherit;
 }
 
 /* Essential element style */
